[gd_scene load_steps=11 format=3 uid="uid://caaidcaxd2nfe"]

[ext_resource type="Script" path="res://scripts/PressurePlate.gd" id="1_ol05y"]
[ext_resource type="Texture2D" uid="uid://dpyp2uvi4njcn" path="res://graphics/models/Pressureplate_MetalTexture.jpg" id="2_hkxys"]
[ext_resource type="AudioStream" uid="uid://ddpxucu8gwrgk" path="res://audio/pressure_plate/Drawing Bow Backwards 7_Reverse_Fade In.wav" id="3_uqpig"]
[ext_resource type="AudioStream" uid="uid://ccd86dylgc5td" path="res://audio/pressure_plate/Drawing Bow Backwards 7_Fade Out.wav" id="4_u62ok"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0wwfs"]
size = Vector3(1.5, 0.4, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1gxd5"]
resource_name = "pressureplate_mat"
albedo_color = Color(0.46, 0.46, 0.46, 1)
albedo_texture = ExtResource("2_hkxys")
metallic = 0.4
metallic_specular = 0.0
roughness = 0.6

[sub_resource type="ArrayMesh" id="ArrayMesh_4lt0n"]
_surfaces = [{
"aabb": AABB(-0.949823, 0.00229857, -0.949823, 1.89965, 0.0761352, 1.89965),
"format": 34896613377,
"index_count": 276,
"index_data": PackedByteArray(24, 0, 3, 0, 1, 0, 24, 0, 25, 0, 3, 0, 25, 0, 5, 0, 3, 0, 25, 0, 26, 0, 5, 0, 26, 0, 7, 0, 5, 0, 26, 0, 27, 0, 7, 0, 27, 0, 9, 0, 7, 0, 27, 0, 28, 0, 9, 0, 28, 0, 11, 0, 9, 0, 28, 0, 29, 0, 11, 0, 29, 0, 13, 0, 11, 0, 29, 0, 30, 0, 13, 0, 30, 0, 15, 0, 13, 0, 30, 0, 31, 0, 15, 0, 31, 0, 17, 0, 15, 0, 31, 0, 32, 0, 17, 0, 32, 0, 19, 0, 17, 0, 32, 0, 33, 0, 19, 0, 33, 0, 21, 0, 19, 0, 33, 0, 34, 0, 21, 0, 11, 0, 40, 0, 9, 0, 11, 0, 41, 0, 40, 0, 34, 0, 23, 0, 21, 0, 34, 0, 35, 0, 23, 0, 35, 0, 1, 0, 23, 0, 35, 0, 24, 0, 1, 0, 22, 0, 2, 0, 0, 0, 2, 0, 6, 0, 4, 0, 6, 0, 10, 0, 8, 0, 10, 0, 14, 0, 12, 0, 14, 0, 18, 0, 16, 0, 18, 0, 22, 0, 20, 0, 22, 0, 6, 0, 2, 0, 6, 0, 14, 0, 10, 0, 14, 0, 22, 0, 18, 0, 6, 0, 22, 0, 14, 0, 22, 0, 24, 0, 35, 0, 22, 0, 0, 0, 24, 0, 20, 0, 35, 0, 34, 0, 20, 0, 22, 0, 35, 0, 18, 0, 34, 0, 33, 0, 18, 0, 20, 0, 34, 0, 16, 0, 33, 0, 32, 0, 16, 0, 18, 0, 33, 0, 14, 0, 32, 0, 31, 0, 14, 0, 16, 0, 32, 0, 12, 0, 31, 0, 30, 0, 12, 0, 14, 0, 31, 0, 10, 0, 30, 0, 29, 0, 10, 0, 12, 0, 30, 0, 8, 0, 29, 0, 28, 0, 8, 0, 10, 0, 29, 0, 6, 0, 28, 0, 27, 0, 6, 0, 8, 0, 28, 0, 4, 0, 27, 0, 26, 0, 4, 0, 6, 0, 27, 0, 2, 0, 26, 0, 25, 0, 2, 0, 4, 0, 26, 0, 0, 0, 25, 0, 24, 0, 0, 0, 2, 0, 25, 0, 38, 0, 37, 0, 36, 0, 37, 0, 46, 0, 47, 0, 46, 0, 44, 0, 45, 0, 44, 0, 42, 0, 43, 0, 42, 0, 40, 0, 41, 0, 40, 0, 38, 0, 39, 0, 38, 0, 46, 0, 37, 0, 46, 0, 42, 0, 44, 0, 42, 0, 38, 0, 40, 0, 46, 0, 38, 0, 42, 0, 9, 0, 39, 0, 7, 0, 9, 0, 40, 0, 39, 0, 1, 0, 47, 0, 23, 0, 1, 0, 37, 0, 47, 0, 3, 0, 37, 0, 1, 0, 3, 0, 36, 0, 37, 0, 7, 0, 38, 0, 5, 0, 7, 0, 39, 0, 38, 0, 23, 0, 46, 0, 21, 0, 23, 0, 47, 0, 46, 0, 5, 0, 36, 0, 3, 0, 5, 0, 38, 0, 36, 0, 21, 0, 45, 0, 19, 0, 21, 0, 46, 0, 45, 0, 19, 0, 44, 0, 17, 0, 19, 0, 45, 0, 44, 0, 17, 0, 43, 0, 15, 0, 17, 0, 44, 0, 43, 0, 15, 0, 42, 0, 13, 0, 15, 0, 43, 0, 42, 0, 13, 0, 41, 0, 11, 0, 13, 0, 42, 0, 41, 0),
"lods": [0.246062, PackedByteArray(24, 0, 38, 0, 1, 0, 1, 0, 38, 0, 46, 0, 1, 0, 46, 0, 23, 0, 24, 0, 25, 0, 38, 0, 25, 0, 26, 0, 38, 0, 26, 0, 7, 0, 38, 0, 7, 0, 39, 0, 38, 0, 26, 0, 27, 0, 7, 0, 27, 0, 28, 0, 7, 0, 7, 0, 42, 0, 39, 0, 13, 0, 42, 0, 7, 0, 29, 0, 30, 0, 13, 0, 28, 0, 29, 0, 13, 0, 28, 0, 13, 0, 7, 0, 15, 0, 42, 0, 13, 0, 30, 0, 15, 0, 13, 0, 30, 0, 31, 0, 15, 0, 31, 0, 17, 0, 15, 0, 31, 0, 32, 0, 17, 0, 17, 0, 44, 0, 15, 0, 33, 0, 44, 0, 17, 0, 33, 0, 45, 0, 44, 0, 32, 0, 33, 0, 17, 0, 33, 0, 34, 0, 21, 0, 21, 0, 45, 0, 33, 0, 21, 0, 46, 0, 45, 0, 23, 0, 46, 0, 21, 0, 34, 0, 23, 0, 21, 0, 34, 0, 35, 0, 23, 0, 35, 0, 1, 0, 23, 0, 35, 0, 24, 0, 1, 0, 2, 0, 6, 0, 4, 0, 0, 0, 6, 0, 2, 0, 6, 0, 0, 0, 16, 0, 16, 0, 0, 0, 18, 0, 6, 0, 16, 0, 10, 0, 6, 0, 10, 0, 8, 0, 0, 0, 24, 0, 35, 0, 0, 0, 25, 0, 24, 0, 0, 0, 2, 0, 25, 0, 2, 0, 26, 0, 25, 0, 2, 0, 4, 0, 26, 0, 4, 0, 27, 0, 26, 0, 4, 0, 6, 0, 27, 0, 0, 0, 35, 0, 34, 0, 18, 0, 0, 0, 34, 0, 18, 0, 34, 0, 33, 0, 16, 0, 33, 0, 32, 0, 16, 0, 18, 0, 33, 0, 16, 0, 32, 0, 31, 0, 16, 0, 31, 0, 30, 0, 10, 0, 16, 0, 30, 0, 10, 0, 30, 0, 29, 0, 8, 0, 10, 0, 29, 0, 8, 0, 29, 0, 28, 0, 6, 0, 8, 0, 28, 0, 6, 0, 28, 0, 27, 0, 46, 0, 44, 0, 45, 0, 46, 0, 42, 0, 44, 0, 46, 0, 38, 0, 42, 0, 42, 0, 38, 0, 39, 0, 15, 0, 44, 0, 42, 0)],
"name": "pressureplate_mat",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(255, 127, 0, 0, 65, 2, 0, 0, 255, 127, 219, 205, 65, 2, 0, 0, 222, 190, 0, 0, 25, 19, 0, 0, 222, 190, 219, 205, 25, 19, 0, 0, 229, 236, 0, 0, 32, 65, 0, 0, 229, 236, 219, 205, 32, 65, 0, 0, 189, 253, 0, 0, 255, 127, 0, 0, 189, 253, 219, 205, 255, 127, 0, 0, 229, 236, 0, 0, 222, 190, 0, 0, 229, 236, 219, 205, 222, 190, 0, 0, 222, 190, 0, 0, 229, 236, 0, 0, 222, 190, 219, 205, 229, 236, 0, 0, 255, 127, 0, 0, 189, 253, 0, 0, 255, 127, 219, 205, 189, 253, 0, 0, 32, 65, 0, 0, 229, 236, 0, 0, 32, 65, 219, 205, 229, 236, 0, 0, 25, 19, 0, 0, 222, 190, 0, 0, 25, 19, 219, 205, 222, 190, 0, 0, 65, 2, 0, 0, 255, 127, 0, 0, 65, 2, 219, 205, 255, 127, 0, 0, 25, 19, 0, 0, 32, 65, 0, 0, 25, 19, 219, 205, 32, 65, 0, 0, 32, 65, 0, 0, 25, 19, 0, 0, 32, 65, 219, 205, 25, 19, 0, 0, 255, 127, 168, 117, 0, 0, 0, 0, 255, 191, 168, 117, 38, 17, 0, 0, 216, 238, 168, 117, 255, 63, 0, 0, 255, 255, 168, 117, 255, 127, 0, 0, 216, 238, 168, 117, 255, 191, 0, 0, 255, 191, 168, 117, 216, 238, 0, 0, 255, 127, 168, 117, 255, 255, 0, 0, 255, 63, 168, 117, 216, 238, 0, 0, 38, 17, 168, 117, 255, 191, 0, 0, 0, 0, 168, 117, 255, 127, 0, 0, 38, 17, 168, 117, 255, 63, 0, 0, 255, 63, 168, 117, 38, 17, 0, 0, 217, 190, 255, 255, 34, 19, 0, 0, 255, 127, 254, 255, 75, 2, 0, 0, 220, 236, 255, 255, 37, 65, 0, 0, 179, 253, 255, 255, 255, 127, 0, 0, 220, 236, 255, 255, 217, 190, 0, 0, 217, 190, 255, 255, 220, 236, 0, 0, 255, 127, 255, 255, 179, 253, 0, 0, 37, 65, 255, 255, 220, 236, 0, 0, 34, 19, 255, 255, 217, 190, 0, 0, 75, 2, 255, 255, 255, 127, 0, 0, 34, 19, 255, 255, 37, 65, 0, 0, 37, 65, 255, 255, 34, 19, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_1228f"]
resource_name = "Pressureplate_Cylinder"
_surfaces = [{
"aabb": AABB(-0.949823, 0.00229857, -0.949823, 1.89965, 0.0761352, 1.89965),
"attribute_data": PackedByteArray(113, 9, 131, 154, 248, 99, 246, 255, 113, 9, 131, 154, 86, 4, 132, 154, 86, 4, 132, 154, 86, 4, 132, 154, 86, 4, 132, 154, 168, 129, 209, 238, 251, 8, 217, 188, 251, 8, 217, 188, 2, 4, 190, 188, 2, 4, 190, 188, 2, 4, 190, 188, 2, 4, 190, 188, 205, 146, 33, 209, 201, 7, 81, 222, 201, 7, 81, 222, 244, 2, 28, 222, 244, 2, 28, 222, 244, 2, 28, 222, 244, 2, 28, 222, 205, 146, 216, 174, 245, 5, 207, 255, 100, 15, 186, 50, 6, 1, 140, 255, 133, 10, 1, 51, 6, 1, 140, 255, 133, 10, 1, 51, 168, 129, 39, 145, 15, 17, 132, 83, 15, 17, 132, 83, 102, 12, 186, 83, 102, 12, 186, 83, 102, 12, 186, 83, 102, 12, 186, 83, 248, 99, 3, 128, 105, 18, 224, 116, 105, 18, 224, 116, 85, 13, 2, 117, 85, 13, 2, 117, 85, 13, 2, 117, 85, 13, 2, 117, 200, 18, 215, 150, 175, 65, 3, 128, 200, 18, 215, 150, 227, 13, 221, 150, 227, 13, 221, 150, 227, 13, 221, 150, 227, 13, 221, 150, 174, 18, 110, 185, 174, 18, 110, 185, 254, 35, 39, 145, 108, 13, 87, 185, 108, 13, 87, 185, 108, 13, 87, 185, 108, 13, 87, 185, 138, 17, 153, 220, 138, 17, 153, 220, 218, 18, 216, 174, 118, 12, 101, 220, 118, 12, 101, 220, 118, 12, 101, 220, 118, 12, 101, 220, 33, 6, 181, 50, 188, 15, 202, 255, 218, 18, 33, 209, 20, 1, 252, 50, 141, 10, 137, 255, 20, 1, 252, 50, 141, 10, 137, 255, 203, 7, 181, 84, 203, 7, 181, 84, 254, 35, 209, 238, 246, 2, 234, 84, 246, 2, 234, 84, 246, 2, 234, 84, 246, 2, 234, 84, 32, 9, 76, 119, 32, 9, 76, 119, 175, 65, 246, 255, 220, 3, 108, 119, 220, 3, 108, 119, 220, 3, 108, 119, 220, 3, 108, 119, 149, 6, 132, 154, 149, 6, 132, 154, 149, 6, 132, 154, 149, 6, 132, 154, 49, 6, 203, 188, 49, 6, 203, 188, 49, 6, 203, 188, 49, 6, 203, 188, 7, 5, 51, 222, 7, 5, 51, 222, 7, 5, 51, 222, 7, 5, 51, 222, 14, 3, 246, 255, 194, 12, 145, 50, 14, 3, 246, 255, 194, 12, 145, 50, 113, 14, 163, 83, 113, 14, 163, 83, 113, 14, 163, 83, 113, 14, 163, 83, 164, 15, 244, 116, 164, 15, 244, 116, 164, 15, 244, 116, 164, 15, 244, 116, 245, 15, 220, 150, 245, 15, 220, 150, 245, 15, 220, 150, 245, 15, 220, 150, 207, 15, 99, 185, 207, 15, 99, 185, 207, 15, 99, 185, 207, 15, 99, 185, 164, 14, 124, 220, 164, 14, 124, 220, 164, 14, 124, 220, 164, 14, 124, 220, 103, 3, 137, 50, 176, 12, 246, 255, 103, 3, 137, 50, 176, 12, 246, 255, 20, 5, 212, 84, 20, 5, 212, 84, 20, 5, 212, 84, 20, 5, 212, 84, 65, 6, 95, 119, 65, 6, 95, 119, 65, 6, 95, 119, 65, 6, 95, 119, 241, 99, 8, 0, 252, 2, 185, 188, 252, 2, 185, 188, 74, 3, 133, 154, 171, 65, 8, 0, 74, 3, 133, 154, 159, 129, 43, 17, 241, 1, 17, 222, 241, 1, 17, 222, 194, 146, 218, 46, 8, 0, 124, 255, 131, 9, 17, 51, 194, 146, 32, 81, 98, 11, 197, 83, 98, 11, 197, 83, 159, 129, 206, 110, 81, 12, 8, 117, 81, 12, 8, 117, 218, 12, 221, 150, 241, 99, 241, 127, 218, 12, 221, 150, 94, 12, 82, 185, 94, 12, 82, 185, 171, 65, 241, 127, 102, 11, 90, 220, 102, 11, 90, 220, 253, 35, 206, 110, 8, 0, 12, 51, 131, 9, 121, 255, 218, 18, 32, 81, 232, 1, 245, 84, 232, 1, 245, 84, 218, 18, 218, 46, 207, 2, 114, 119, 207, 2, 114, 119, 253, 35, 43, 17, 113, 9, 131, 154, 86, 4, 132, 154, 86, 4, 132, 154, 133, 10, 1, 51, 133, 10, 1, 51, 105, 18, 224, 116, 227, 13, 221, 150, 227, 13, 221, 150, 108, 13, 87, 185, 108, 13, 87, 185, 138, 17, 153, 220, 118, 12, 101, 220, 33, 6, 181, 50, 246, 2, 234, 84, 220, 3, 108, 119, 220, 3, 108, 119, 149, 6, 132, 154, 149, 6, 132, 154, 149, 6, 132, 154, 49, 6, 203, 188, 49, 6, 203, 188, 49, 6, 203, 188, 7, 5, 51, 222, 14, 3, 246, 255, 194, 12, 145, 50, 113, 14, 163, 83, 113, 14, 163, 83, 113, 14, 163, 83, 164, 15, 244, 116, 245, 15, 220, 150, 245, 15, 220, 150, 245, 15, 220, 150, 207, 15, 99, 185, 207, 15, 99, 185, 164, 14, 124, 220, 103, 3, 137, 50, 176, 12, 246, 255, 20, 5, 212, 84, 20, 5, 212, 84, 65, 6, 95, 119, 65, 6, 95, 119, 65, 6, 95, 119, 241, 1, 17, 222, 241, 1, 17, 222, 131, 9, 17, 51, 218, 12, 221, 150, 218, 12, 221, 150, 102, 11, 90, 220, 102, 11, 90, 220, 232, 1, 245, 84),
"format": 34896613399,
"index_count": 276,
"index_data": PackedByteArray(86, 0, 10, 0, 5, 0, 86, 0, 88, 0, 10, 0, 90, 0, 17, 0, 12, 0, 90, 0, 92, 0, 17, 0, 94, 0, 24, 0, 19, 0, 94, 0, 96, 0, 24, 0, 97, 0, 33, 0, 25, 0, 97, 0, 102, 0, 33, 0, 100, 0, 40, 0, 31, 0, 100, 0, 106, 0, 40, 0, 104, 0, 47, 0, 38, 0, 104, 0, 110, 0, 47, 0, 109, 0, 55, 0, 46, 0, 109, 0, 115, 0, 55, 0, 113, 0, 62, 0, 53, 0, 113, 0, 119, 0, 62, 0, 117, 0, 69, 0, 60, 0, 117, 0, 123, 0, 69, 0, 122, 0, 74, 0, 68, 0, 122, 0, 125, 0, 74, 0, 41, 0, 145, 0, 32, 0, 41, 0, 149, 0, 145, 0, 127, 0, 81, 0, 76, 0, 127, 0, 129, 0, 81, 0, 131, 0, 4, 0, 83, 0, 131, 0, 85, 0, 4, 0, 79, 0, 7, 0, 1, 0, 7, 0, 21, 0, 14, 0, 21, 0, 35, 0, 28, 0, 35, 0, 51, 0, 43, 0, 51, 0, 65, 0, 58, 0, 65, 0, 79, 0, 72, 0, 79, 0, 21, 0, 7, 0, 21, 0, 51, 0, 35, 0, 51, 0, 79, 0, 65, 0, 21, 0, 79, 0, 51, 0, 78, 0, 84, 0, 130, 0, 78, 0, 0, 0, 84, 0, 71, 0, 128, 0, 126, 0, 71, 0, 77, 0, 128, 0, 63, 0, 124, 0, 120, 0, 63, 0, 70, 0, 124, 0, 56, 0, 121, 0, 116, 0, 56, 0, 64, 0, 121, 0, 49, 0, 118, 0, 112, 0, 49, 0, 57, 0, 118, 0, 42, 0, 114, 0, 108, 0, 42, 0, 50, 0, 114, 0, 36, 0, 111, 0, 105, 0, 36, 0, 44, 0, 111, 0, 29, 0, 107, 0, 101, 0, 29, 0, 37, 0, 107, 0, 23, 0, 103, 0, 99, 0, 23, 0, 30, 0, 103, 0, 16, 0, 98, 0, 95, 0, 16, 0, 22, 0, 98, 0, 9, 0, 93, 0, 91, 0, 9, 0, 15, 0, 93, 0, 2, 0, 89, 0, 87, 0, 2, 0, 8, 0, 89, 0, 138, 0, 136, 0, 132, 0, 136, 0, 164, 0, 167, 0, 164, 0, 158, 0, 161, 0, 158, 0, 151, 0, 155, 0, 151, 0, 144, 0, 147, 0, 144, 0, 138, 0, 141, 0, 138, 0, 164, 0, 136, 0, 164, 0, 151, 0, 158, 0, 151, 0, 138, 0, 144, 0, 164, 0, 138, 0, 151, 0, 34, 0, 143, 0, 27, 0, 34, 0, 146, 0, 143, 0, 3, 0, 166, 0, 82, 0, 3, 0, 135, 0, 166, 0, 11, 0, 137, 0, 6, 0, 11, 0, 133, 0, 137, 0, 26, 0, 140, 0, 20, 0, 26, 0, 142, 0, 140, 0, 80, 0, 163, 0, 75, 0, 80, 0, 165, 0, 163, 0, 18, 0, 134, 0, 13, 0, 18, 0, 139, 0, 134, 0, 73, 0, 159, 0, 66, 0, 73, 0, 162, 0, 159, 0, 67, 0, 156, 0, 59, 0, 67, 0, 160, 0, 156, 0, 61, 0, 153, 0, 52, 0, 61, 0, 157, 0, 153, 0, 54, 0, 150, 0, 45, 0, 54, 0, 154, 0, 150, 0, 48, 0, 148, 0, 39, 0, 48, 0, 152, 0, 148, 0),
"lods": [0.246062, PackedByteArray(185, 0, 210, 0, 169, 0, 169, 0, 210, 0, 217, 0, 169, 0, 217, 0, 183, 0, 186, 0, 187, 0, 210, 0, 188, 0, 92, 0, 211, 0, 92, 0, 24, 0, 211, 0, 24, 0, 142, 0, 211, 0, 92, 0, 96, 0, 24, 0, 97, 0, 193, 0, 171, 0, 171, 0, 213, 0, 212, 0, 175, 0, 213, 0, 171, 0, 104, 0, 110, 0, 175, 0, 100, 0, 104, 0, 174, 0, 194, 0, 174, 0, 172, 0, 176, 0, 150, 0, 175, 0, 197, 0, 176, 0, 175, 0, 197, 0, 115, 0, 176, 0, 200, 0, 179, 0, 176, 0, 200, 0, 119, 0, 179, 0, 179, 0, 215, 0, 176, 0, 204, 0, 215, 0, 179, 0, 204, 0, 160, 0, 215, 0, 202, 0, 204, 0, 179, 0, 203, 0, 205, 0, 181, 0, 181, 0, 159, 0, 203, 0, 181, 0, 162, 0, 159, 0, 182, 0, 162, 0, 181, 0, 127, 0, 182, 0, 181, 0, 127, 0, 207, 0, 182, 0, 131, 0, 170, 0, 182, 0, 131, 0, 184, 0, 170, 0, 7, 0, 21, 0, 14, 0, 1, 0, 21, 0, 7, 0, 21, 0, 1, 0, 58, 0, 58, 0, 1, 0, 65, 0, 21, 0, 58, 0, 35, 0, 21, 0, 35, 0, 28, 0, 0, 0, 84, 0, 208, 0, 0, 0, 189, 0, 84, 0, 0, 0, 8, 0, 189, 0, 8, 0, 190, 0, 91, 0, 8, 0, 15, 0, 190, 0, 15, 0, 191, 0, 95, 0, 15, 0, 22, 0, 191, 0, 168, 0, 209, 0, 206, 0, 180, 0, 168, 0, 206, 0, 63, 0, 124, 0, 120, 0, 56, 0, 121, 0, 116, 0, 56, 0, 64, 0, 121, 0, 56, 0, 116, 0, 112, 0, 178, 0, 201, 0, 198, 0, 173, 0, 178, 0, 198, 0, 36, 0, 199, 0, 196, 0, 29, 0, 36, 0, 107, 0, 29, 0, 107, 0, 195, 0, 23, 0, 29, 0, 103, 0, 23, 0, 103, 0, 192, 0, 164, 0, 158, 0, 161, 0, 164, 0, 151, 0, 158, 0, 164, 0, 138, 0, 151, 0, 151, 0, 138, 0, 141, 0, 177, 0, 216, 0, 214, 0)],
"material": SubResource("StandardMaterial3D_1gxd5"),
"name": "pressureplate_mat",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 218,
"vertex_data": PackedByteArray(255, 127, 0, 0, 65, 2, 129, 236, 255, 127, 0, 0, 65, 2, 176, 192, 255, 127, 0, 0, 65, 2, 19, 250, 255, 127, 219, 205, 65, 2, 10, 249, 255, 127, 219, 205, 65, 2, 44, 246, 255, 127, 219, 205, 65, 2, 139, 233, 255, 127, 219, 205, 65, 2, 232, 247, 222, 190, 0, 0, 25, 19, 176, 192, 222, 190, 0, 0, 25, 19, 99, 252, 222, 190, 0, 0, 25, 19, 44, 247, 222, 190, 219, 205, 25, 19, 115, 232, 222, 190, 219, 205, 25, 19, 222, 247, 222, 190, 219, 205, 25, 19, 139, 218, 222, 190, 219, 205, 25, 19, 221, 232, 229, 236, 0, 0, 32, 65, 176, 192, 229, 236, 0, 0, 32, 65, 79, 243, 229, 236, 0, 0, 32, 65, 154, 232, 229, 236, 219, 205, 32, 65, 97, 219, 229, 236, 219, 205, 32, 65, 185, 232, 229, 236, 219, 205, 32, 65, 188, 204, 229, 236, 219, 205, 32, 65, 87, 218, 189, 253, 0, 0, 255, 127, 176, 192, 189, 253, 0, 0, 255, 127, 226, 229, 189, 253, 0, 0, 255, 127, 198, 218, 189, 253, 219, 205, 255, 127, 32, 206, 189, 253, 219, 205, 255, 127, 48, 199, 189, 253, 219, 205, 255, 127, 52, 218, 189, 253, 219, 205, 255, 127, 165, 208, 229, 236, 0, 0, 222, 190, 176, 192, 229, 236, 0, 0, 222, 190, 178, 210, 229, 236, 0, 0, 222, 190, 134, 215, 229, 236, 219, 205, 222, 190, 114, 189, 229, 236, 219, 205, 222, 190, 9, 199, 229, 236, 219, 205, 222, 190, 202, 201, 229, 236, 219, 205, 222, 190, 105, 208, 222, 190, 0, 0, 229, 236, 176, 192, 222, 190, 0, 0, 229, 236, 181, 201, 222, 190, 0, 0, 229, 236, 182, 202, 222, 190, 219, 205, 229, 236, 162, 188, 222, 190, 219, 205, 229, 236, 70, 193, 222, 190, 219, 205, 229, 236, 149, 197, 222, 190, 219, 205, 229, 236, 175, 198, 255, 127, 0, 0, 189, 253, 94, 196, 255, 127, 0, 0, 189, 253, 176, 192, 255, 127, 0, 0, 189, 253, 170, 192, 255, 127, 219, 205, 189, 253, 164, 192, 255, 127, 219, 205, 189, 253, 65, 193, 255, 127, 219, 205, 189, 253, 194, 197, 255, 127, 219, 205, 189, 253, 219, 192, 32, 65, 0, 0, 229, 236, 13, 196, 32, 65, 0, 0, 229, 236, 112, 187, 32, 65, 0, 0, 229, 236, 176, 192, 32, 65, 219, 205, 229, 236, 101, 197, 32, 65, 219, 205, 229, 236, 159, 202, 32, 65, 219, 205, 229, 236, 53, 192, 32, 65, 219, 205, 229, 236, 129, 202, 25, 19, 0, 0, 222, 190, 251, 200, 25, 19, 0, 0, 222, 190, 89, 188, 25, 19, 0, 0, 222, 190, 176, 192, 25, 19, 219, 205, 222, 190, 163, 206, 25, 19, 219, 205, 222, 190, 65, 215, 25, 19, 219, 205, 222, 190, 15, 197, 25, 19, 219, 205, 222, 190, 45, 211, 65, 2, 0, 0, 255, 127, 17, 210, 65, 2, 0, 0, 255, 127, 33, 198, 65, 2, 0, 0, 255, 127, 176, 192, 65, 2, 219, 205, 255, 127, 79, 221, 65, 2, 219, 205, 255, 127, 112, 206, 65, 2, 219, 205, 255, 127, 17, 236, 65, 2, 219, 205, 255, 127, 208, 218, 25, 19, 0, 0, 32, 65, 120, 208, 25, 19, 0, 0, 32, 65, 243, 222, 25, 19, 0, 0, 32, 65, 176, 192, 25, 19, 219, 205, 32, 65, 36, 221, 25, 19, 219, 205, 32, 65, 175, 238, 25, 19, 219, 205, 32, 65, 157, 234, 25, 19, 219, 205, 32, 65, 122, 247, 32, 65, 0, 0, 25, 19, 160, 221, 32, 65, 0, 0, 25, 19, 234, 235, 32, 65, 0, 0, 25, 19, 176, 192, 32, 65, 219, 205, 25, 19, 126, 234, 32, 65, 219, 205, 25, 19, 12, 252, 32, 65, 219, 205, 25, 19, 17, 249, 32, 65, 219, 205, 25, 19, 255, 248, 255, 127, 168, 117, 0, 0, 118, 236, 255, 127, 168, 117, 0, 0, 18, 246, 255, 127, 168, 117, 0, 0, 125, 233, 255, 127, 168, 117, 0, 0, 247, 249, 255, 191, 168, 117, 38, 17, 106, 232, 255, 191, 168, 117, 38, 17, 65, 252, 255, 191, 168, 117, 38, 17, 145, 218, 255, 191, 168, 117, 38, 17, 93, 247, 216, 238, 168, 117, 255, 63, 108, 219, 216, 238, 168, 117, 255, 63, 134, 243, 216, 238, 168, 117, 255, 63, 203, 204, 216, 238, 168, 117, 255, 63, 189, 232, 255, 255, 168, 117, 255, 127, 47, 206, 255, 255, 168, 117, 255, 127, 78, 199, 255, 255, 168, 117, 255, 127, 9, 230, 255, 255, 168, 117, 255, 127, 239, 218, 216, 238, 168, 117, 255, 191, 205, 189, 216, 238, 168, 117, 255, 191, 23, 211, 216, 238, 168, 117, 255, 191, 228, 201, 216, 238, 168, 117, 255, 191, 181, 215, 255, 191, 168, 117, 216, 238, 11, 189, 255, 191, 168, 117, 216, 238, 39, 202, 255, 191, 168, 117, 216, 238, 231, 197, 255, 191, 168, 117, 216, 238, 39, 203, 255, 127, 168, 117, 255, 255, 206, 196, 255, 127, 168, 117, 255, 255, 172, 193, 255, 127, 168, 117, 255, 255, 28, 198, 255, 127, 168, 117, 255, 255, 44, 193, 255, 63, 168, 117, 216, 238, 111, 196, 255, 63, 168, 117, 216, 238, 1, 203, 255, 63, 168, 117, 216, 238, 239, 187, 255, 63, 168, 117, 216, 238, 220, 202, 38, 17, 168, 117, 255, 191, 32, 201, 38, 17, 168, 117, 255, 191, 106, 215, 38, 17, 168, 117, 255, 191, 197, 188, 38, 17, 168, 117, 255, 191, 129, 211, 0, 0, 168, 117, 255, 127, 38, 210, 0, 0, 168, 117, 255, 127, 73, 198, 0, 0, 168, 117, 255, 127, 48, 236, 0, 0, 168, 117, 255, 127, 243, 218, 38, 17, 168, 117, 255, 63, 142, 208, 38, 17, 168, 117, 255, 63, 201, 238, 38, 17, 168, 117, 255, 63, 6, 223, 38, 17, 168, 117, 255, 63, 175, 247, 255, 63, 168, 117, 38, 17, 176, 221, 255, 63, 168, 117, 38, 17, 57, 252, 255, 63, 168, 117, 38, 17, 229, 235, 255, 63, 168, 117, 38, 17, 222, 248, 217, 190, 255, 255, 34, 19, 176, 192, 217, 190, 255, 255, 34, 19, 222, 247, 217, 190, 255, 255, 34, 19, 221, 232, 255, 127, 254, 255, 75, 2, 10, 249, 255, 127, 254, 255, 75, 2, 176, 192, 255, 127, 254, 255, 75, 2, 232, 247, 220, 236, 255, 255, 37, 65, 176, 192, 220, 236, 255, 255, 37, 65, 185, 232, 220, 236, 255, 255, 37, 65, 87, 218, 179, 253, 255, 255, 255, 127, 176, 192, 179, 253, 255, 255, 255, 127, 51, 218, 179, 253, 255, 255, 255, 127, 164, 208, 220, 236, 255, 255, 217, 190, 176, 192, 220, 236, 255, 255, 217, 190, 7, 199, 220, 236, 255, 255, 217, 190, 104, 208, 217, 190, 255, 255, 220, 236, 176, 192, 217, 190, 255, 255, 220, 236, 67, 193, 217, 190, 255, 255, 220, 236, 174, 198, 255, 127, 255, 255, 179, 253, 161, 192, 255, 127, 255, 255, 179, 253, 176, 192, 255, 127, 255, 255, 179, 253, 217, 192, 37, 65, 255, 255, 220, 236, 99, 197, 37, 65, 255, 255, 220, 236, 51, 192, 37, 65, 255, 255, 220, 236, 176, 192, 34, 19, 255, 255, 217, 190, 162, 206, 34, 19, 255, 255, 217, 190, 13, 197, 34, 19, 255, 255, 217, 190, 176, 192, 75, 2, 255, 255, 255, 127, 78, 221, 75, 2, 255, 255, 255, 127, 111, 206, 75, 2, 255, 255, 255, 127, 176, 192, 34, 19, 255, 255, 37, 65, 35, 221, 34, 19, 255, 255, 37, 65, 156, 234, 34, 19, 255, 255, 37, 65, 176, 192, 37, 65, 255, 255, 34, 19, 126, 234, 37, 65, 255, 255, 34, 19, 17, 249, 37, 65, 255, 255, 34, 19, 176, 192, 255, 127, 0, 0, 65, 2, 71, 213, 255, 127, 219, 205, 65, 2, 120, 216, 255, 127, 219, 205, 65, 2, 244, 238, 189, 253, 219, 205, 255, 127, 40, 190, 189, 253, 219, 205, 255, 127, 142, 202, 222, 190, 0, 0, 229, 236, 10, 219, 255, 127, 219, 205, 189, 253, 91, 213, 255, 127, 219, 205, 189, 253, 12, 193, 32, 65, 219, 205, 229, 236, 231, 194, 32, 65, 219, 205, 229, 236, 60, 213, 25, 19, 0, 0, 222, 190, 245, 203, 25, 19, 219, 205, 222, 190, 195, 201, 65, 2, 0, 0, 255, 127, 19, 204, 25, 19, 219, 205, 32, 65, 229, 225, 32, 65, 219, 205, 25, 19, 198, 234, 32, 65, 219, 205, 25, 19, 56, 213, 255, 127, 168, 117, 0, 0, 235, 231, 255, 127, 168, 117, 0, 0, 35, 231, 255, 127, 168, 117, 0, 0, 18, 213, 255, 191, 168, 117, 38, 17, 179, 207, 255, 191, 168, 117, 38, 17, 244, 218, 255, 191, 168, 117, 38, 17, 127, 238, 216, 238, 168, 117, 255, 63, 126, 222, 255, 255, 168, 117, 255, 127, 147, 205, 255, 255, 168, 117, 255, 127, 51, 200, 216, 238, 168, 117, 255, 191, 109, 202, 216, 238, 168, 117, 255, 191, 191, 203, 216, 238, 168, 117, 255, 191, 154, 187, 255, 191, 168, 117, 216, 238, 77, 186, 255, 127, 168, 117, 255, 255, 102, 199, 255, 127, 168, 117, 255, 255, 119, 213, 255, 127, 168, 117, 255, 255, 167, 192, 255, 63, 168, 117, 216, 238, 119, 198, 255, 63, 168, 117, 216, 238, 59, 206, 38, 17, 168, 117, 255, 191, 93, 202, 0, 0, 168, 117, 255, 127, 144, 210, 0, 0, 168, 117, 255, 127, 238, 197, 38, 17, 168, 117, 255, 63, 98, 207, 38, 17, 168, 117, 255, 63, 170, 204, 255, 63, 168, 117, 38, 17, 111, 219, 255, 63, 168, 117, 38, 17, 16, 236, 255, 63, 168, 117, 38, 17, 197, 207, 220, 236, 255, 255, 37, 65, 241, 214, 220, 236, 255, 255, 37, 65, 249, 222, 179, 253, 255, 255, 255, 127, 247, 204, 255, 127, 255, 255, 179, 253, 108, 196, 255, 127, 255, 255, 179, 253, 90, 213, 34, 19, 255, 255, 217, 190, 73, 203, 34, 19, 255, 255, 217, 190, 125, 213, 34, 19, 255, 255, 37, 65, 122, 213, 81, 62, 211, 196, 173, 26, 168, 114, 83, 53, 56, 200, 19, 68, 156, 187, 60, 204, 186, 54, 95, 195, 205, 56, 80, 188, 172, 67, 173, 26, 168, 114, 118, 59, 227, 206, 1, 174, 3, 77, 99, 201, 157, 65, 255, 187, 79, 67, 240, 191, 125, 68, 228, 180, 51, 74, 173, 26, 168, 114, 128, 168, 233, 70, 215, 164, 121, 79, 196, 196, 94, 78, 156, 180, 204, 73, 106, 188, 229, 80, 243, 173, 125, 80, 173, 26, 168, 114, 131, 162, 129, 76, 177, 154, 83, 82, 252, 189, 129, 85, 98, 186, 130, 103, 211, 173, 69, 80, 253, 167, 39, 91, 173, 26, 168, 114, 70, 143, 176, 88, 195, 152, 166, 79, 133, 180, 106, 115, 244, 157, 114, 100, 237, 186, 235, 106, 229, 167, 238, 90, 173, 26, 168, 114, 122, 122, 208, 97, 141, 139, 231, 83, 68, 165, 62, 139, 83, 142, 207, 115, 162, 179, 105, 122, 228, 157, 57, 100, 0, 98, 194, 118, 173, 26, 168, 114, 116, 118, 251, 96, 164, 115, 85, 142, 212, 142, 71, 161, 22, 160, 46, 142, 81, 142, 175, 115, 109, 81, 42, 140, 149, 93, 173, 121, 173, 26, 168, 114, 230, 99, 38, 158, 190, 122, 134, 177, 170, 115, 118, 142, 12, 138, 252, 160, 44, 74, 150, 155, 12, 81, 101, 146, 173, 26, 168, 114, 96, 90, 82, 168, 6, 109, 54, 181, 247, 99, 94, 158, 170, 117, 4, 172, 182, 68, 74, 168, 242, 74, 68, 159, 173, 26, 168, 114, 80, 81, 210, 172, 119, 90, 134, 168, 201, 93, 120, 177, 141, 106, 45, 178, 53, 70, 40, 172, 134, 61, 183, 175, 173, 26, 168, 114, 116, 81, 17, 173, 164, 91, 245, 174, 156, 74, 235, 179, 133, 88, 130, 183, 18, 66, 52, 184, 53, 56, 72, 188, 173, 26, 168, 114, 212, 74, 58, 180, 129, 82, 70, 177, 223, 67, 97, 187, 38, 198, 187, 47, 251, 61, 90, 196, 120, 204, 254, 54, 164, 195, 49, 57, 7, 53, 228, 199, 160, 201, 245, 65, 29, 59, 130, 206, 41, 192, 244, 68, 68, 174, 77, 77, 241, 196, 187, 78, 209, 168, 67, 71, 125, 188, 28, 81, 243, 164, 157, 79, 11, 190, 173, 85, 104, 186, 170, 103, 165, 162, 172, 76, 201, 154, 116, 82, 122, 180, 190, 115, 113, 143, 232, 88, 242, 186, 12, 107, 224, 152, 206, 79, 1, 165, 100, 139, 169, 122, 218, 97, 154, 179, 171, 122, 199, 139, 50, 84, 49, 98, 162, 118, 154, 142, 67, 161, 232, 159, 72, 142, 177, 118, 8, 97, 114, 81, 223, 139, 125, 122, 64, 177, 220, 93, 126, 121, 224, 137, 249, 160, 34, 74, 105, 155, 232, 108, 17, 181, 17, 81, 7, 146, 125, 117, 211, 171, 164, 68, 26, 168, 231, 74, 13, 159, 176, 93, 91, 177, 118, 106, 16, 178, 31, 70, 239, 171, 143, 91, 221, 174, 79, 61, 80, 175, 62, 88, 57, 183, 207, 65, 183, 183, 71, 82, 10, 177, 231, 55, 219, 187, 108, 198, 13, 48, 81, 229, 86, 141, 253, 187, 77, 67, 226, 180, 49, 74, 20, 68, 157, 187, 81, 229, 86, 141, 78, 188, 170, 67, 81, 229, 86, 141, 154, 180, 202, 73, 242, 173, 124, 80, 81, 229, 86, 141, 211, 173, 68, 80, 253, 167, 38, 91, 81, 229, 86, 141, 243, 157, 112, 100, 228, 167, 237, 90, 81, 229, 86, 141, 83, 142, 206, 115, 228, 157, 56, 100, 164, 115, 85, 142, 81, 229, 86, 141, 81, 142, 175, 115, 230, 99, 39, 158, 170, 115, 118, 142, 81, 229, 86, 141, 96, 90, 83, 168, 248, 99, 95, 158, 81, 229, 86, 141, 81, 81, 211, 172, 119, 90, 135, 168, 81, 229, 86, 141, 117, 81, 18, 173, 157, 74, 237, 179, 81, 229, 86, 141, 213, 74, 59, 180, 224, 67, 98, 187, 81, 229, 86, 141, 245, 35, 25, 172, 163, 247, 128, 122, 191, 196, 236, 178, 76, 173, 250, 101, 78, 201, 181, 135, 219, 104, 189, 109, 161, 168, 214, 128, 68, 147, 231, 125, 112, 122, 232, 151, 223, 173, 64, 129, 3, 56, 97, 122, 211, 109, 46, 165, 57, 37, 15, 131, 186, 89, 187, 181, 185, 101, 70, 201, 120, 251, 153, 124, 243, 158, 181, 228, 214, 199, 151, 61, 241, 215, 84, 76, 101, 225, 209, 94, 202, 190, 225, 67, 224, 83, 178, 29, 210, 150, 231, 32, 112, 159, 105, 67, 25, 159, 74, 90, 171, 186, 36, 107, 99, 193, 22, 139, 203, 141, 47, 108, 170, 114, 124, 141, 162, 137, 161, 115, 132, 89, 158, 111, 114, 118, 226, 96, 0, 113, 57, 143, 62, 71, 9, 119, 174, 101, 166, 165, 45, 98, 150, 186, 127, 103, 196, 168, 32, 101, 16, 187, 100, 33, 73, 136, 210, 107, 44, 213, 31, 55, 87, 186, 176, 27, 8, 150, 34, 249, 47, 121, 186, 181, 28, 82, 144, 170, 34, 97, 41, 157, 11, 104, 241, 168, 213, 128, 182, 99, 23, 167, 5, 166, 31, 130, 61, 248, 36, 121)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_4lt0n")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_udksc"]
random_pitch = 1.2
random_volume_offset_db = 0.2
streams_count = 1
stream_0/stream = ExtResource("4_u62ok")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vrtni"]
random_pitch = 1.2
random_volume_offset_db = 0.2
streams_count = 1
stream_0/stream = ExtResource("3_uqpig")
stream_0/weight = 1.0

[node name="PressurePlate" type="Area3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ol05y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
shape = SubResource("BoxShape3D_0wwfs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_1228f")

[node name="PressSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_udksc")
volume_db = -8.0

[node name="ReleaseSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_vrtni")
volume_db = -8.0
